2023-02-04  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/7914332c40ee811ad08a90e4eb7d40c2d1e81f4e ) and raygui ( https://github.com/raysan5/raygui/commit/cec2de3440eac0ad0020d3ce3d546706c0749335 )

2023-01-28  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Added Linux x86_64 binaries
	* Added GitHub Actions scripts

2023-01-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* example/util/setup_dll.rb: Fixed

2023-01-21  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Added Linux x86_64 binaries

2023-01-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* example/models_loading_gltf.rb: Added glTF animation playback

2023-01-01  vaiorabbit  <http://twitter.com/vaiorabbit>

	* example/reversi_board.rb: Added

2022-12-31  vaiorabbit  <http://twitter.com/vaiorabbit>

	* example/game_of_life_simple.rb: Added

2022-12-30  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator: Now generates binding code for config.h

2022-12-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator: Now generates enum descriptions
	* Fixed several codes according to Rubocop warnings
	* lib/raylib_helper.rb: Added several helper functions/classes

2022-12-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Converted DrawModelEx into a wrapper function of rbDrawModelEx to avoid Matrix problem found in models_animation sample
	* Attach functions with an explicit name - Ref.: https://www.rubydoc.info/github/ffi/ffi/FFI%2FLibrary:attach_function
	* setup_xxx_symbols: name, retval and arguments of one function are now packed into one line
	* generator: Now imports descriptions from original API schema
	* Generated with the latest raylib ( https://github.com/raysan5/raylib/commit/03cc540d5f1df71bd7ad8118d0e11b492fa5cc18 )

2022-12-24  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Experimental Linux (Chromebook) support

2022-12-10  vaiorabbit  <http://twitter.com/vaiorabbit>
